<resources>
    <string name="app_name">"OnlineLectureRoom "</string>
    <string name="signIn">Sign In</string>
    <string name="register">Register</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_event">Event List</string>


    <string name="errorNoInternet">No internet connection try again later</string>
    <string name="errorOccured">Error occured try again later</string>

    <!-- Strings related to login -->
    <string name="prompt_firstName">First Name</string>
    <string name="prompt_lastName">Last Name</string>
    <string name="prompt_UserName">User Name</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirmPassword">Confirm Password</string>

    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="signUp">SIGN UP</string>
    <string name="verificationCode">Verification Code</string>

    <!-- Error Message -->
    <string name="errorFirstName">Enter First Name</string>
    <string name="errorLastName">Enter Last Name</string>
    <string name="errorUserName">Enter User Name</string>

    <string-array name="role">
        <item>Who you are ? </item>
        <item>Student</item>
        <item>Teacher</item>
    </string-array>

    <string-array name="branch">
        <item>Select you branch</item>
        <item>Electrical</item>
        <item>Mechanical</item>
        <item>Electronics &amp; Telecommunication</item>
    </string-array>

    <string-array name="tabs">
        <item>Upcoming Events </item>
        <item>Events </item>
    </string-array>
</resources>
